# drake

./: MODULE.bazel  venv
bindings/pydrake/visualization/: run_installed_meldis.py
bindings/pydrake/visualization/test/: visualization_install_tests.py
geometry/render_vtk/: BUILD.bazel
geometry/render_vtk/test/: internal_render_engine_vtk_test.cc
setup/mac/binary_distribution/: install_prereqs.sh
setup/ubuntu/source_distribution/: install_prereqs.sh
tools/install/: install_test.py  install_test_helper.py
tools/wheel/: Dockerfile  README.rst
tools/wheel/image/: build-drake.sh  build-python.sh  build-wheel.sh  provision-build.sh  provision-python.sh
tools/wheel/macos/: build-wheel.sh
tools/wheel/wheel_builder/: common.py  macos.py  main.py
tools/workspace/: default.bzl
tools/workspace/cpplint_internal/: repository.bzl
tools/workspace/cpplint_internal/patches/: transitive_includes.patch  whitespace_newline.patch
tools/workspace/nanobind/: package.BUILD.bazel  repository.bzl
tools/workspace/pybind11/: libclang_setup.py  repository.bzl
