# -*- bazel -*-

load("@drake//tools/skylark:cc.bzl", "cc_library")
load("@drake//tools/install:install.bzl", "install", "install_files")

licenses(["notice"])  # BSD-3-Clause

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "nanobind",
    hdrs = glob([
            "include/nanobind/*.h",
            "include/nanobind/stl/*.h",
            "include/nanobind/eigen/*.h",
        ]),
        includes = [
            "include",
        ],
        copts = [
            "-fexceptions",
            "-fvisibility=hidden",
        ],
        deps = [
            "@python",
        ]
)
